fix wrap heights for form error messages

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -268,7 +268,7 @@ input[type=submit]:hover {
 
   #rsvp-wrap {
     margin: 0;
-    min-height: 470px;
+    min-height: 460px;
   }
 
   #rsvp-wrap h2 {
@@ -287,6 +287,7 @@ input[type=submit]:hover {
 
   #gift-wrap {
     margin: 0;
+    min-height: 550px;
   }
 
   /* mobile responsive styles */
